HLC/25-26/Docker/Caronte/proyectos/personal/mi-portfolio-con-helm/templates/servicemiportfolio.yml
apiVersion: v1
kind: Service
metadata:
  name: miportfolio-service
  namespace: miportfoliohelm
spec:
  type: NodePort
  selector:
    app: miportfolio
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
