HLC/25-26/Docker/Caronte/proyectos/personal/mi-portfolio-con-helm/templates/ingressmiportfolio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miportfolio-ingress
  namespace: miportfoliohelm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: miportfolio.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: miportfolio-service
              port:
                number: 80
